[LayoutNG] SelfPaintingLayer is left visible when ellipsized

NGLineTruncator truncates lines by suppressing fragments to
be clipped. However, when such fragments have
SelfPaintingLayer, they are still painted by LayerPainter.

This patch moves such fragments to the outside of the
clipping area, the same way we used to use until r581177.

Note that we used to move to line_width before r581177,
but it's not enough when the block has padding. This
patch moves to NearlyMax instead.

Bug: 899902
Change-Id: I6192f230e2da3af11346acb5795483f9cc3a6a6a
Reviewed-on: https://chromium-review.googlesource.com/c/1319889
Commit-Queue: Koji Ishii <kojii@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605996}
Former-commit-id: ce828bebf2bae168f51ed62242faef5c5316d121